--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>three.js editor</title>
+    <title>Capiweb</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -76,7 +76,7 @@
       import { Capi } from "./js/Capi.js";
       import { Viewport } from "./js/Viewport.js";
       // import { Toolbar } from './js/Toolbar.js';  ///rotate, translate..
-      // import { Script } from './js/Script.js';
+      //import { Script } from "./js/Script.js";
       // import { Player } from './js/Player.js';
       import { Sidebar } from "./js/Sidebar.js";
       import { Menubar } from "./js/Menubar.js";
@@ -105,8 +105,8 @@
       // const toolbar = new Toolbar( editor );
       // document.body.appendChild( toolbar.dom );
 
-      // const script = new Script( editor );
-      // document.body.appendChild( script.dom );
+      // const script = new Script(capi);
+      // document.body.appendChild(script.dom);
 
       // const player = new Player( editor );
       // document.body.appendChild( player.dom );
